RichwoodNew/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Source_Detail__c</fullName>
        <label>Account Source Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EZSelect</fullName>
                </value>
                <value>
                    <fullName>SME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_of_Distribution__c</fullName>
        <label>Area of Distribution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Names__c</fullName>
        <description>Company Brand Names</description>
        <label>Brand Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommercientSF__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommercientSF__Commercient_ArCustomerCode__c</fullName>
        <description>This contains an alternative customer code from an external ERP package. This is a code you can index on in addition to the Commercient CustomerGUID. If the ERP package is Syspro this will typically be the ArCustomer.Customer code.</description>
        <externalId>true</externalId>
        <label>Commercient ArCustomerCode</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CommercientSF__Commercient_CustomerGUID2__c</fullName>
        <label>Commercient CustomerGUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercientSF__Commercient_CustomerGUID__c</fullName>
        <label>Commercient CustomerGUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercientSF__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommercientSF__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommercientSF__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CommercientSF__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercientSF__SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommercientSF__Syspro_Customer_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Syspro Customer Record</label>
        <referenceTo>CommercientSF__ArCustomer__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommercientSF__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISO_Ratings__c</fullName>
        <description>ISO Ratings</description>
        <label>ISO Ratings</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_SIC_Code__c</fullName>
        <description>Primary SIC Code</description>
        <label>Primary SIC Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code_2__c</fullName>
        <label>SIC Code 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code_3__c</fullName>
        <label>SIC Code 3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code_4__c</fullName>
        <label>SIC Code 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Established__c</fullName>
        <description>Year Established (4 digits)</description>
        <label>Year Established</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accHierarchy__Hierarchy_Parents__c</fullName>
        <label>Hierarchy Parents</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>accHierarchy__On_Previous_Hierarchy_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Previous Hierarchy Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>accHierarchy__TopParentId__c</fullName>
        <label>Top Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accHierarchy__hasChildWithChanges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Child With Changes</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Include_in_Forecast__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Account_Source_Detail__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>clee</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Prospect_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <label>All Prospect Accounts</label>
        <sharedTo>
            <roleAndSubordinates>Richwood_Castings</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Castings_EZ_Select_Import</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <columns>Account_Source_Detail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CommercientSF__Commercient_ArCustomerCode__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Account_Source_Detail__c</field>
            <operation>equals</operation>
            <value>EZSelect</value>
        </filters>
        <label>Castings EZ Select Import</label>
        <sharedTo>
            <roleAndSubordinates>Richwood_Castings</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Forecast_Selection</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Include_in_Forecast__c</columns>
        <columns>CommercientSF__Active__c</columns>
        <columns>CommercientSF__Commercient_ArCustomerCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>Forecast Selection</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT_NAME</columns>
        <columns>Include_in_Forecast__c</columns>
        <columns>CommercientSF__Active__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Active_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Include_in_Forecast__c</columns>
        <columns>CommercientSF__Active__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CommercientSF__Active__c</field>
            <operation>notEqual</operation>
            <value>No</value>
        </filters>
        <label>My Active Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Customer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>My Customer Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Prospect_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <label>My Prospect Accounts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>RWC_Sales_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>